--- a/lib/jade-plugin.jade
+++ b/lib/jade-plugin.jade
@@ -4,7 +4,7 @@ html
 		title #{title}
 		script(src="//cdn.bootcss.com/es5-shim/4.5.9/es5-shim.js")
 		script(src="//cdn.bootcss.com/es5-shim/4.5.9/es5-sham.js")
-		script(src="http://cdn.bootcss.com/jquery/2.2.3/jquery.min.js")
+		script(src="//cdn.bootcss.com/jquery/2.2.3/jquery.min.js")
 		link(rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css")
 		${INCLUDE}
 		link(rel="stylesheet" href="/bundle/${APP}/bundle.css")
