--- a/lib/jade-plugin.jade
+++ b/lib/jade-plugin.jade
@@ -2,15 +2,15 @@ html
 	head
 		meta(charset="utf-8")
 		title #{title}
-		script(src="//cdn.bootcss.com/es5-shim/4.5.9/es5-shim.js")
-		script(src="//cdn.bootcss.com/es5-shim/4.5.9/es5-sham.js")
 		script(src="//cdn.bootcss.com/jquery/2.2.3/jquery.min.js")
 		link(rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css")
+		${PRECLUDE}
 		${INCLUDE}
 		link(rel="stylesheet" href="/bundle/${APP}/bundle.css")
 		script.
 			window.__INITIAL_STATE__ = (function(){return !{JSON.stringify(init)}})();
 			$.ajaxSetup({contentType: "application/json; charset=utf-8"});
+			(function(){${PRESCRIPT}})()
 	body
 		#container !{html}
 		script(src="/bundle/${APP}/bundle.js")
